# yihao-command

./: .env.local.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.ts
.claude/: settings.local.json
docs/: PRD.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/ai/: page.tsx
src/app/calendar/: page.tsx
src/app/customers/: page.tsx
src/app/finance/: page.tsx
src/app/settings/: page.tsx
src/app/tasks/: page.tsx
src/components/layout/: index.ts  main-content.tsx  sidebar.tsx
src/components/ui/: page-header.tsx
src/lib/: db.ts
src/stores/: customer-store.ts  index.ts  task-store.ts
